# barber_pro

./: .env.example  .gitignore  README.md  pyproject.toml
deploy/: Dockerfile  docker-compose.yml
deploy/northflank/: .env.example  Dockerfile  README.md  migrate.sh
docs/: IMPLEMENTATION_RUNBOOK_RU.md
migrations/: 001_init.sql  002_seed.sql  003_admin_guest_hard_delete.sql  004_tajik_locale_and_service_name.sql
src/barber_bot/: config.py  container.py  i18n.py  logging_utils.py  time_utils.py
src/barber_bot/api/: __init__.py  app.py
src/barber_bot/bot/: __init__.py  factory.py  keyboards.py  states.py  utils.py
src/barber_bot/db/: __init__.py  models.py  repositories.py  session.py
src/barber_bot/entrypoints/: api_server.py  bot_service.py
src/barber_bot/scheduler/: runner.py
src/barber_bot/services/: __init__.py  booking.py  drafts.py  export_xlsx.py  idempotency.py  phone.py  slots.py
src/barber_shop_telegram_bot.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/e2e/: test_locale_smoke.py
tests/integration/: test_admin_crud_postgres.py  test_admin_hard_delete_postgres.py  test_admin_today_details_postgres.py  test_admin_visit_status_postgres.py  test_api_admin_endpoints.py  test_booking_race_postgres.py  test_idempotency.py  test_webhook_secret.py
tests/unit/: test_admin_calendar_keyboard.py  test_admin_weekly_schedule.py  test_booking_availability.py  test_booking_rules.py  test_export_xlsx.py  test_i18n_tj.py  test_keyboards_language.py  test_phone.py  test_reminder_jobs.py  test_shift_validation.py  test_slots.py
(+7 files in other folders)
