[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "barber-shop-telegram-bot"
version = "0.1.0"
description = "Production-oriented Telegram bot for barber shop booking"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "aiogram>=3.4.1,<4.0.0",
  "fastapi>=0.111.0,<1.0.0",
  "uvicorn[standard]>=0.30.0,<1.0.0",
  "sqlalchemy[asyncio]>=2.0.30,<3.0.0",
  "asyncpg>=0.29.0,<1.0.0",
  "redis[hiredis]>=5.0.4,<6.0.0",
  "pydantic-settings>=2.3.1,<3.0.0",
  "phonenumbers>=8.13.39,<9.0.0",
  "orjson>=3.10.5,<4.0.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2.2,<9.0.0",
  "pytest-asyncio>=0.23.7,<1.0.0",
  "httpx>=0.27.0,<1.0.0",
  "ruff>=0.5.0,<1.0.0",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "ASYNC"]
ignore = ["B008"]
